--- a/logger/field.yml
+++ b/logger/field.yml
@@ -3,7 +3,7 @@ pipelines:
     input:
       type: file
       persistence_mode: async
-      watching_dir: /tmp/logs
+      watching_dir: /tmp/logger
       filename_pattern: log.txt
       offsets_file: /tmp/offsets.yaml
       offsets_op: reset
